cmake_minimum_required(VERSION 3.9)
project(42_corewar)

set(CMAKE_CXX_STANDARD 11)

add_executable(42_corewar
        include/ft_asm.h
        include/op.h
        libft/include/ft_array.h
        libft/include/ft_date.h
        libft/include/ft_printf.h
        libft/include/ft_re.h
        libft/include/ft_wchar.h
        libft/include/get_next_line.h
        libft/include/libft.h
        libft/src/ft_array/fta_alloc.c
        libft/src/ft_array/fta_append.c
        libft/src/ft_array/fta_clear.c
        libft/src/ft_array/fta_new.c
        libft/src/ft_array/fta_overwrite.c
        libft/src/ft_array/fta_popback.c
        libft/src/ft_array/fta_popindex.c
        libft/src/ft_array/fta_printdata.c
        libft/src/ft_array/fta_release.c
        libft/src/ft_array/fta_replace.c
        libft/src/ft_array/fta_reserve.c
        libft/src/ft_array/fta_resize.c
        libft/src/ft_array/fta_string.c
        libft/src/ft_array/fta_swap.c
        libft/src/ft_array/fta_trim.c
        libft/src/ft_lst/ft_lstadd.c
        libft/src/ft_lst/ft_lstaddlast.c
        libft/src/ft_lst/ft_lstclear.c
        libft/src/ft_lst/ft_lstdel.c
        libft/src/ft_lst/ft_lstdelone.c
        libft/src/ft_lst/ft_lstfind.c
        libft/src/ft_lst/ft_lstiter.c
        libft/src/ft_lst/ft_lstlast.c
        libft/src/ft_lst/ft_lstmap.c
        libft/src/ft_lst/ft_lstmerge.c
        libft/src/ft_lst/ft_lstnew.c
        libft/src/ft_lst/ft_lstremoveif.c
        libft/src/ft_lst/ft_lstrev.c
        libft/src/ft_lst/ft_lstsize.c
        libft/src/ft_lst/ft_lstsort.c
        libft/src/ft_lst/ft_lstswap.c
        libft/src/ft_lst/ft_putlst.c
        libft/src/ft_lst/ft_strsplit_tolst.c
        libft/src/ft_math/ft_modf.c
        libft/src/ft_math/ft_round_base.c
        libft/src/ft_mem/ft_bzero.c
        libft/src/ft_mem/ft_memalloc.c
        libft/src/ft_mem/ft_memccpy.c
        libft/src/ft_mem/ft_memchr.c
        libft/src/ft_mem/ft_memcmp.c
        libft/src/ft_mem/ft_memcpy.c
        libft/src/ft_mem/ft_memdel.c
        libft/src/ft_mem/ft_memmove.c
        libft/src/ft_mem/ft_memset.c
        libft/src/ft_printf/ft_convert.c
        libft/src/ft_printf/ft_convert_char.c
        libft/src/ft_printf/ft_convert_color.c
        libft/src/ft_printf/ft_convert_data.c
        libft/src/ft_printf/ft_convert_date.c
        libft/src/ft_printf/ft_convert_double_1.c
        libft/src/ft_printf/ft_convert_double_2.c
        libft/src/ft_printf/ft_convert_double_3.c
        libft/src/ft_printf/ft_convert_memory.c
        libft/src/ft_printf/ft_convert_numeric_1.c
        libft/src/ft_printf/ft_convert_numeric_2.c
        libft/src/ft_printf/ft_convert_numeric_3.c
        libft/src/ft_printf/ft_printf.c
        libft/src/ft_printf/ft_vasprintf.c
        libft/src/ft_printf/ft_vprintf.c
        libft/src/ft_re/ft_re.c
        libft/src/ft_re/ft_re_match_1.c
        libft/src/ft_re/ft_re_match_2.c
        libft/src/ft_re/ft_re_match_3.c
        libft/src/ft_re/ft_re_match_4.c
        libft/src/ft_str/ft_atoi.c
        libft/src/ft_str/ft_isalnum.c
        libft/src/ft_str/ft_isalpha.c
        libft/src/ft_str/ft_isascii.c
        libft/src/ft_str/ft_isdigit.c
        libft/src/ft_str/ft_ishexdigit.c
        libft/src/ft_str/ft_isprint.c
        libft/src/ft_str/ft_itoa.c
        libft/src/ft_str/ft_putchar.c
        libft/src/ft_str/ft_putchar_fd.c
        libft/src/ft_str/ft_putendl.c
        libft/src/ft_str/ft_putendl_fd.c
        libft/src/ft_str/ft_putnbr.c
        libft/src/ft_str/ft_putnbr_fd.c
        libft/src/ft_str/ft_putstr.c
        libft/src/ft_str/ft_putstr_fd.c
        libft/src/ft_str/ft_strcat.c
        libft/src/ft_str/ft_strchr.c
        libft/src/ft_str/ft_strclr.c
        libft/src/ft_str/ft_strcmp.c
        libft/src/ft_str/ft_strcpy.c
        libft/src/ft_str/ft_strdel.c
        libft/src/ft_str/ft_strdup.c
        libft/src/ft_str/ft_strequ.c
        libft/src/ft_str/ft_striter.c
        libft/src/ft_str/ft_striteri.c
        libft/src/ft_str/ft_strjoin.c
        libft/src/ft_str/ft_strlcat.c
        libft/src/ft_str/ft_strlen.c
        libft/src/ft_str/ft_strmap.c
        libft/src/ft_str/ft_strmapi.c
        libft/src/ft_str/ft_strncat.c
        libft/src/ft_str/ft_strncmp.c
        libft/src/ft_str/ft_strncpy.c
        libft/src/ft_str/ft_strnequ.c
        libft/src/ft_str/ft_strnew.c
        libft/src/ft_str/ft_strnstr.c
        libft/src/ft_str/ft_strrchr.c
        libft/src/ft_str/ft_strsplit.c
        libft/src/ft_str/ft_strstr.c
        libft/src/ft_str/ft_strsub.c
        libft/src/ft_str/ft_strtrim.c
        libft/src/ft_str/ft_tolower.c
        libft/src/ft_str/ft_toupper.c
        libft/src/ft_wchar/wide_char.c
        libft/src/ft_date.c
        libft/src/get_next_line.c
        src/asm_checker_labels.c
        src/asm_checker_labels.c~HEAD
        src/asm_checker_op.c
        src/asm_checker_op.c~HEAD
        src/asm_compiler.c
        src/asm_compiler_header.c
        src/asm_error.c
        src/asm_helper_1.c
        src/asm_helper_2.c
        src/asm_parser.c
        src/asm_parser_header.c
        src/asm_parser_op.c
        src/asm_parser_param.c
        src/asm_print.c
        src/ft_asm.c
        src/ft_convert_op.c
        src/ft_strcdup.c
        src/ft_strcspn.c)
